# dualsensitive

./: CMakeLists.txt  LICENSE  README.md  resources.rc
.github/workflows/: build.yml
include/: DS5State.h  DS5_Input.h  DS5_Output.h  DS_CRC32.h  Helpers.h  IO.h  dualsense.h  dualsensitive.h  log.h  udp.h
src/: DS5_Output.cpp  Helpers.cpp  IO.cpp  dualsense.cpp  dualsensitive.cpp  udp.cpp
src/core/: DS5State.h  DS5_Output.cpp  Device.h  IO.cpp  logger.cpp  logger.h
src/core/udp/: udp.cpp  udp.h
src/service/: main.cpp  resource.h  resources.rc
test/: main.cpp
test/client/: main.cpp
test/server/: main.cpp
test/solo/: main.cpp
